deployment/ingress-resource.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-skaffold-demo
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/ssl-services: "skaffold-demo"
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/server-alias: sgune.com
spec:
  tls:
    - hosts:
      - sgune.com
      secretName: sgune-cert
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: skaffold-demo
              servicePort: 80
          - path : /
            backend:
              serviceName: skaffold-demo
              servicePort: 443
